WebView: Remove worker restrictions from AwContentBrowserClient

AllowWorkerFileSystem and AllowWorkerIndexedDB are how Chrome
enables/disables features for particular domains. WebView settings
aren't per domain, so WebView doesn't need deny these features here.

Specifically, AllowWorkerIndexedDB was preventing Service Workers from
using IndexdDB, which is supported in WebView.

BUG=783159

Change-Id: I4fad21200e0dd5ceee4a3be86c3bb059a6908511