android_webview/browser/aw_content_browser_client.cc
@@ -345,7 +345,7 @@ void AwContentBrowserClient::AllowWorkerFileSystem(
     const std::vector<std::pair<int, int> >& render_frames,
     base::Callback<void(bool)> callback) {
   // Android WebView does not yet support web workers.
-  callback.Run(false);
+  callback.Run(true);
 }
 
 bool AwContentBrowserClient::AllowWorkerIndexedDB(
@@ -354,7 +354,7 @@ bool AwContentBrowserClient::AllowWorkerIndexedDB(
     content::ResourceContext* context,
     const std::vector<std::pair<int, int> >& render_frames) {
   // Android WebView does not yet support web workers.
-  return false;
+  return true;
 }
 
 content::QuotaPermissionContext*
